feat(sortable-util): stick weight/ frozen rows
置顶行权重与默认权重分离,可以分别进行移动